# EN_WA_Notes

./: .pre-commit-config.yaml  README.md  create_WA_notes_import_file.py  document.py  note.py  pyproject.toml
Documents/: WA_Notes.original.old_method.enex
documentation/: WA_notes.example.202302.enex
